# atsc

./: .gitignore  README.md  atsc.service  build_proto.bat  build_rpc.bat  chnice.sh  compile-pb.bat  controller-pypy.bat  controller.bat  deadcode.bat  demo.py  env_pi.sh  frames.py  gen_schemas.bat  hdlc.py  id_standard.txt  live.bat  mergejson.py  pack.py  pyproject.toml  requirements.in  requirements.txt  run.bat  run.sh  run_debug.bat  run_debug.sh  run_debug_pypy.bat  run_pi.sh  run_pi_debug.sh  run_pi_screen.sh  run_s.sh  setup_pi.sh  start.sh  stop.sh  tui.bat  unpack.sh
atsc/: cli.py  config.py  configfile.py  constants.py  controller.py  core.py  eventbus.py  fieldbus.py  frames.py  hdlc.py  interfaces.py  logging.py  logic.py  main.py  models.py  netbus.py  network.py  networking.py  parameters.py  primitives.py  programs.py  ringbarrier.py  serialbus.py  timing.py  utils.py
atsc/cli/: live.py  main.py  models.py
atsc/common/: cli.py  constants.py  fundemental.py  models.py  (+7 more)
configs/: 185-dev.json  185-rpi.json  306-dev.json  306-rpi.json  dev.json  dev1.json  dev2.json  dev_long1.json  dev_quick1.json  inputs.json  long.json  quick.json  rpi.json  rpi4.json  rpi_long1.json  rpi_quick1.json  v4-1.json
protobufs/: controller.proto  field_output.proto  phase.proto  signal.proto
requirements/: control-only.txt  dev.txt  full.txt  production.txt
scripts/: buscli.py  busdemo.py  busfuzz.py  businputs.py  busmonitor.py  rpc-cycle-mode.bat  rpc-fya-disabled.bat  rpc-fya-enabled.bat  rpc-get-metadata.bat  rpc-phase-demand.bat  rpc-signal-demand.bat  rpc-signal-presence.bat  rpc-sim-disable.bat  rpc-sim-enable.bat  rpc-time-freeze.bat  rpc-time-unfreeze.bat  sbclient.bat  sbserver.sh  serialbridge.py  serialbridge.txt  testhdlc.py  testhumandt.py  testtimespan.py  testtiming.py
snippets/: dev_device.json  inputs.json  rpi4_device.json
src/: cli.py  configfile.py  controller.py  core.py  events.py  finelog.py  frames.py  fundemental.py  hdlc.py  interfaces.py  logging.py  main.py  network.py  ringbarrier.py  scheduling.py  serialbus.py  timespan.py  timing.py  utils.py
tests/: demo.py  hdlc.py  logic.py
(+79 files in other folders)
